github worflow modified

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -14,8 +14,8 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
-    #- name: Start containers
-    #  run: docker-compose -f "docker-compose.yml" up -d --build
+    - name: Start containers
+      run: docker-compose -f "docker-compose.yml" up -d --build
 
     - name: Run tests
       run: docker-compose run app sh -c "python3 manage.py test && flake8"
